==> Clnian/smart-curtain/智能窗帘/API/oled/OLED.c <==
#include "stm32f10x.h"
#include "OLED.h"
#include <string.h>
#include <math.h>
#include <stdio.h>
#include <stdarg.h>

void OLED_W_SCL(uint8_t BitValue)
{
    /* OLED底层驱动说明 */
    GPIO_WriteBit(OLED_GPIO_SCL_PORT, OLED_GPIO_SCL_PIN, (BitAction)BitValue);
    
    /* OLED底层驱动说明 */
    //...
}

void OLED_W_SDA(uint8_t BitValue)
{
    /* OLED底层驱动说明 */
    GPIO_WriteBit(OLED_GPIO_SDA_PORT, OLED_GPIO_SDA_PIN, (BitAction)BitValue);
    
    /* OLED底层驱动说明 */
    //...
}

void OLED_GPIO_Init(void)
{
    uint32_t i, j;

    /* OLED底层驱动说明 */
    for (i = 0; i < 1000; i ++)
    {
        for (j = 0; j < 1000; j ++);
    }

    /* OLED底层驱动说明 */
    RCC_APB2PeriphClockCmd(OLED_GPIO_SCL_CLK | OLED_GPIO_SDA_CLK, ENABLE);

    GPIO_InitTypeDef GPIO_InitStructure;
    GPIO_InitStructure.GPIO_Mode = GPIO_Mode_Out_OD;
    GPIO_InitStructure.GPIO_Speed = GPIO_Speed_50MHz;
    GPIO_InitStructure.GPIO_Pin = OLED_GPIO_SCL_PIN;
    GPIO_Init(OLED_GPIO_SCL_PORT, &GPIO_InitStructure);
    GPIO_InitStructure.GPIO_Pin = OLED_GPIO_SDA_PIN;
    GPIO_Init(OLED_GPIO_SDA_PORT, &GPIO_InitStructure);

    /* OLED底层驱动说明 */
    OLED_W_SCL(1);
    OLED_W_SDA(1);

    OLED_Clear();
    OLED_Update();
}
